Fix collapsed RTL badge

--- a/src/components/badge/index.scss
+++ b/src/components/badge/index.scss
@@ -29,6 +29,9 @@
   &--collapsed {
     .badge__badge {
       transform: scale(0) translate(50%, -50%);
+      @include util.rtl {
+        transform: scale(0) translate(-50%, -50%);
+      }
     }
   }
   &__badge {
